--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "bundle.js",
+  "type": "module",
   "scripts": {
-    "build": "rollup -c -w"
+    "build": "rollup -c"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
     "@babel/core": "^7.23.9",
     "@babel/plugin-external-helpers": "^7.14.5",
     "@babel/preset-env": "^7.23.9",
+    "@rollup/plugin-alias": "^5.1.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-json": "^6.1.0",
